# pancake

./: Cargo.toml  README.md
assets/: index.js  style.css  winreg1.reg  winreg2.reg  winreg3.reg
migrations/2021-05-23-171627_create_open_preferences/: down.sql  up.sql
src/: config.rs  database.rs  main.rs  models.rs  schema.rs
