[package]
name = "pancake"
version = "0.1.0"
authors = ["Philip Wrenn <philwrenn@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
dirs = "3.0.1"
simplelog = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
web-view = { version = "0.7.2", features = ["edge"] }
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15.0"